Descending into TCollection

--- a/playground/root/CMakeLists.txt
+++ b/playground/root/CMakeLists.txt
@@ -1,9 +1,14 @@
 cmake_minimum_required (VERSION 2.6)
 
-# Generate the dictionary
+# Generate the dictionaries
 add_custom_command (
     OUTPUT TMyClass-dictionary.cpp TMyClass-dictionary.h
     COMMAND rootcint TMyClass-dictionary.cpp -c ${CMAKE_CURRENT_SOURCE_DIR}/TMyClass.h
+)
+
+add_custom_command (
+    OUTPUT TData-dictionary.cpp TData-dictionary.h
+    COMMAND rootcint TData-dictionary.cpp -c ${CMAKE_CURRENT_SOURCE_DIR}/TData.h
 )
 
 # Build a shared object
@@ -12,6 +17,7 @@ set (CMAKE_EXE_LINKER_FLAGS "-Wl,--no-as-needed")
 add_library (
     TMyClass SHARED
     TMyClass.cpp TMyClass-dictionary.cpp
+    TData.cpp TData-dictionary.cpp
 )
 target_link_libraries (TMyClass ${ROOT_LIBRARIES})
 
