Moved test binary outsite visitor folder

--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -4,3 +4,7 @@ add_definitions (-std=c++11)
 
 add_subdirectory (root)
 add_subdirectory (visitor)
+
+# Test binary
+add_executable (test main.cpp)
+target_link_libraries (test rootvisitor TMyClass)
