Refactoring type specific code into modules

--- a/playground/visitor/CMakeLists.txt
+++ b/playground/visitor/CMakeLists.txt
@@ -4,5 +4,7 @@ file (GLOB src_visitor "*.cpp")
 
 set (CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-as-needed")
 
-add_library(rootvisitor SHARED ${src_visitor})
-target_link_libraries(rootvisitor ${ROOT_LIBRARIES})
+add_library (RootVisitor SHARED ${src_visitor})
+target_link_libraries (RootVisitor ${ROOT_LIBRARIES})
+
+add_subdirectory (handlers)
