--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -6,5 +6,7 @@ add_subdirectory (root)
 add_subdirectory (visitor)
 
 # Test binary
+set (CMAKE_EXE_LINKER_FLAGS "-Wl,--no-as-needed")
+
 add_executable (test main.cpp)
-target_link_libraries (test rootvisitor TMyClass)
+target_link_libraries (test RootVisitor TMyClass)
