Code reorganized. Walker moved to src.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,4 @@ include_directories (
 add_definitions (${ROOT_CFLAGS} ${SCIDB_CXX_FLAGS})
 
 add_subdirectory (src)
-add_subdirectory (playground)
+add_subdirectory (test)
