--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,4 @@
 cmake_minimum_required (VERSION 2.6)
 
-set (scidb_root_src
-    plugin.cpp
-    version/LogicalRootVersion.cpp
-    version/PhysicalRootVersion.cpp
-)
-
-add_library(root SHARED ${scidb_root_src})
-
-target_link_libraries (root ${ROOT_LIBRARIES} ${SCIDB_LIBRARIES})
+add_subdirectory (RootWalker)
+add_subdirectory (ScidbPlugin)
