--- a/src/RootWalker/handlers/CMakeLists.txt
+++ b/src/RootWalker/handlers/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 2.6)
 
 add_subdirectory (TCollection)
+add_subdirectory (TDirectory)
 add_subdirectory (TPolyLine)
 add_subdirectory (Vector)
+
