--- a/src/RootWalker/handlers/CMakeLists.txt
+++ b/src/RootWalker/handlers/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 
 add_subdirectory (TCollection)
 add_subdirectory (TDirectory)
+add_subdirectory (TObjString)
 add_subdirectory (TPolyLine)
+add_subdirectory (TTree)
 add_subdirectory (Vector)
-
