Some refactoring to allow picking a node

--- a/src/ScidbPlugin/CMakeLists.txt
+++ b/src/ScidbPlugin/CMakeLists.txt
@@ -4,8 +4,10 @@ set (scidb_root_src
     plugin.cpp
     version/LogicalRootVersion.cpp
     version/PhysicalRootVersion.cpp
+    loader/LogicalRootLoader.cpp
+    loader/PhysicalRootLoader.cpp
 )
 
 add_library(root SHARED ${scidb_root_src})
 
-target_link_libraries (root ${ROOT_LIBRARIES} ${SCIDB_LIBRARIES})
+target_link_libraries (root RootWalker ${ROOT_LIBRARIES} ${SCIDB_LIBRARIES})
