Connecting schema inferring to RootWalker

--- a/src/RootWalker/handlers/TDirectory/CMakeLists.txt
+++ b/src/RootWalker/handlers/TDirectory/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required (VERSION 2.6)
 
 add_library (TDirectory MODULE TDirectory.cpp)
+target_link_libraries (TDirectory RootWalker ${ROOT_LIBRARIES})
