--- a/src/RootWalker/handlers/TObjString/CMakeLists.txt
+++ b/src/RootWalker/handlers/TObjString/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required (VERSION 2.6)
 
 add_library (TObjString MODULE TObjString.cpp)
+target_link_libraries (TObjString RootWalker ${ROOT_LIBRARIES})
