--- a/src/ScidbPlugin/CMakeLists.txt
+++ b/src/ScidbPlugin/CMakeLists.txt
@@ -8,6 +8,9 @@ set (scidb_root_src
     loader/PhysicalRootLoader.cpp
 )
 
-add_library(root SHARED ${scidb_root_src})
+include_directories ("${CMAKE_CURRENT_SOURCE_DIR}/../RootWalker/")
 
+set (CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-as-needed")
+
+add_library(root SHARED ${scidb_root_src})
 target_link_libraries (root RootWalker ${ROOT_LIBRARIES} ${SCIDB_LIBRARIES})
