--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,4 +9,4 @@ set (CMAKE_EXE_LINKER_FLAGS "-Wl,--no-as-needed")
 add_definitions (-std=c++11 -DBUILD_PATH="${CMAKE_CURRENT_BINARY_DIR}/../src/RootWalker/handlers/")
 
 add_executable (test main.cpp)
-target_link_libraries (test RootWalker TMyClass)
+target_link_libraries (test RootWalker TMyClass log4cxx)
