--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required (VERSION 2.6)
 
 add_subdirectory (RootWalker)
-add_subdirectory (ScidbPlugin)
+add_subdirectory (JRootWalker)
+#add_subdirectory (ScidbPlugin)
