Namespace scidb::root => raw::root

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required (VERSION 2.6)
 
 add_subdirectory (RootWalker)
 add_subdirectory (JRootWalker)
-#add_subdirectory (ScidbPlugin)
+add_subdirectory (ScidbPlugin)
