--- a/src/RootWalker/CMakeLists.txt
+++ b/src/RootWalker/CMakeLists.txt
@@ -7,6 +7,6 @@ file (GLOB src_visitor "*.cpp")
 set (CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-as-needed")
 
 add_library (RootWalker SHARED ${src_visitor})
-target_link_libraries (RootWalker ${ROOT_LIBRARIES})
+target_link_libraries (RootWalker ${ROOT_LIBRARIES} log4cxx)
 
 add_subdirectory (handlers)
