--- a/src/RootWalker/CMakeLists.txt
+++ b/src/RootWalker/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required (VERSION 2.6)
 
+set (CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-as-needed")
+
 add_definitions (-std=c++11)
 
 file (GLOB src_visitor "*.cpp")
 
-set (CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-as-needed")
-
 add_library (RootWalker SHARED ${src_visitor})
-target_link_libraries (RootWalker ${ROOT_LIBRARIES} log4cxx)
+target_link_libraries (RootWalker ${ROOT_LIBRARIES})
 
 add_subdirectory (handlers)
